Display disconnects, No input source to display after switching between audio devices
- System architecture: x86_64
- Kernel version: 5.16.14-arch1-1
- Linux distribution: archlinux
- Machine or mother board model: Dell wyse 5070 intel j4105 Gemini lake (dmidecode attached)
- Display connector: Display Port, going though passthrough DP to HDMI adapter to TV/Monitor
Steps to reproduce: Boot into Xorg, open pulse audio volume control, go to configuration tab and start switching between different audio inputs until the display disconnects. The display will not reconnect. Unplugging and plugging in the cable has no effect.
The only way to get the display working again is to ssh into the box and issue the following commands:
$ xrandr -d :0 --output DP-2 --off
$ xrandr -d :0 --output DP-2 --set audio on --mode 1920x1080 --rate 60
This does not happen in windows on the same machine.
Edited by Jay Mann