DEBUG: drm/i915/display: do not bump min cdclk for audio on GLK v2

A test patch to disable the lowest CDCLK on GLK and also comment
out the related code in intel_audio.c.

BugLink: https://gitlab.freedesktop.org/drm/intel/-/issues/5368